Fixed dialog spacing for News

--- a/src/_includes/css/base.css
+++ b/src/_includes/css/base.css
@@ -29,26 +29,26 @@ body {
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 3rem;
     font-weight: 400;
-    margin: 1.5em 0;
+    margin: 1.5rem 0;
 }
 
 h2 {
-    font-size: 1.8em;
+    font-size: 1.8rem;
     font-weight: 300;
-    margin: 2em 0 1em 0;
+    margin: 2rem 0 1rem 0;
 }
 
 h3 {
-    font-size: 1.4em;
+    font-size: 1.4rem;
     font-weight: 500;
-    margin-bottom: 0.8em;
+    margin-bottom: 0.8rem;
 }
 
 p {
-    font-size: 1.1em;
-    margin: 1em 0;
+    font-size: 1.1rem;
+    margin: 1rem 0;
 }
 
 a {
@@ -56,7 +56,7 @@ a {
 }
 
 .normal-page {
-    width: min(60em, 100%);
+    width: min(60rem, 100%);
     margin: 6em auto;
 }
 
